test/fail/suggest-local-ai.mo
//MOC-FLAG --ai-errors
let xxx = 1;
x;
